crates/forge_app/src/dto/openai/snapshots/forge_app__dto__openai__request__tests__user_message_conversion.snap
---
source: crates/forge_app/src/dto/openai/request.rs
expression: router_message
---
{
  "role": "user",
  "content": "Hello"
}
